@@ -2,9 +2,11 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:i18n="http://namespaces.zope.org/i18n"
-    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
     i18n_domain="ftw.casauth">
 
   <five:registerPackage package="." initialize=".initialize" />
-    
+
+  <include package=".restapi" zcml:condition="installed plone.restapi"/>
+
 </configure>
