@@ -1,0 +1,15 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:plone="http://namespaces.plone.org/plone"
+    xmlns:i18n="http://namespaces.zope.org/i18n"
+    i18n_domain="ftw.casauth">
+
+  <plone:service
+      method="POST"
+      name="@caslogin"
+      for="*"
+      factory=".caslogin.CASLogin"
+      permission="zope.Public"
+      />
+
+</configure>
