@@ -1,10 +1,12 @@
+from ftw.casauth.plugin import CASAuthenticationPlugin
+from ftw.testbrowser import TRAVERSAL_BROWSER_FIXTURE
+from plone.app.testing import applyProfile
 from plone.app.testing import FunctionalTesting
 from plone.app.testing import IntegrationTesting
 from plone.app.testing import PLONE_FIXTURE
 from plone.app.testing import PloneSandboxLayer
 from plone.testing import z2
 from zope.configuration import xmlconfig
-from ftw.casauth.plugin import CASAuthenticationPlugin
 
 
 class FtwCasauthLayer(PloneSandboxLayer):
@@ -13,12 +15,19 @@ class FtwCasauthLayer(PloneSandboxLayer):
 
     def setUpZope(self, app, configurationContext):
         # Load ZCML
+        import plone.restapi
+        xmlconfig.file(
+            'configure.zcml',
+            plone.restapi,
+            context=configurationContext
+        )
         import ftw.casauth
         xmlconfig.file(
             'configure.zcml',
             ftw.casauth,
             context=configurationContext
         )
+        z2.installProduct(app, 'plone.restapi')
         z2.installProduct(app, 'ftw.casauth')
 
     def setUpPloneSite(self, portal):
@@ -35,10 +44,12 @@ class FtwCasauthLayer(PloneSandboxLayer):
             'IExtractionPlugin',
         ])
         self['plugin'] = plugin
+        applyProfile(portal, 'plone.restapi:default')
+
 
 FTW_CASAUTH_FIXTURE = FtwCasauthLayer()
 FTW_CASAUTH_INTEGRATION_TESTING = IntegrationTesting(
-    bases=(FTW_CASAUTH_FIXTURE,),
+    bases=(FTW_CASAUTH_FIXTURE, TRAVERSAL_BROWSER_FIXTURE),
     name="FtwcasauthLayer:Integration"
 )
 FTW_CASAUTH_FUNCTIONAL_TESTING = FunctionalTesting(
