@@ -4,7 +4,11 @@ Changelog
 1.1.1 (unreleased)
 ------------------
 
+- Add plone.restapi endpoint for login.
+  [buchi]
+
 - Add Plone 5 compatibility. [phgross]
+
 
 1.1.0 (2016-10-13)
 ------------------
